--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ header ul li a:hover{
   height: 700px;
 }
 .container{
-  /* width: 1200px; */
   max-width: 1200px;
   margin: 0 auto;
   background-color: #fff;
@@ -165,9 +164,9 @@ width: 100%;
 .curriculo button i{
   margin:0 10px;
 }
-.curriculo button:hover{
-  background-color: #f84238;
+.curriculo button:hover, .atrazBtn button:hover{
   
+  background-color: #f84238;
 }
  .sobreMim h2, .tecnologias h2, .projetos h2, .estudos h2{
 font-size: 2.5rem;
@@ -192,7 +191,8 @@ margin: 20px 10px 40px 20px;
 
 .projetos{
   width: 100%;
-  background-color: rgb(53, 53, 53);
+  background-color: #005FB8;
+  background: url(img/wave.svg) no-repeat bottom center;
   overflow: hidden;
 
 }
@@ -205,11 +205,13 @@ margin: 20px 10px 40px 20px;
   max-width: 1200px;
   margin: 25px auto;
   padding: 10px;
+  background: url(img/wave.svg) no-repeat bottom center;
   
 }
-.container_01 h2{
-  color: #fff;
-  z-index: 1;
+.container_01 h3{
+  color:#FFF;
+  font-size: 1.5rem;
+  margin: 15px;
 }
 .cards{
   display: flex;
@@ -217,69 +219,77 @@ margin: 20px 10px 40px 20px;
   flex-wrap: wrap;  
 }
 .cardContainer{
-  position: relative;
   width: 300px;
-  height: 300px;
-  /* border: 1px solid red; */
+  height: 350px;
   margin: 20px 10px 20px 10px;
-  box-shadow: 3px 3px 6px #000;
-  transition: 0.5s;
-}
-.cardContainer:hover{
-  height: 401px;
- 
 }
 
-.texto_00{
-  position: relative;
-  bottom:180px;
-  height: 100px;
-  width: 100%;
-  color: #fff;
-  padding: 10px;
-  background-color: rgb(37, 37, 37);
-  z-index: 1;
-  overflow: auto;
-  transition: 0.5s;
-  
-}
-.texto_00::-webkit-scrollbar-track {
-  background-color: #F4F4F4;
-}
-.texto_00::-webkit-scrollbar {
-  width: 6px;
-  background: #F4F4F4;
-}
-.texto_00::-webkit-scrollbar-thumb {
-  background: #a8a8a8;
-}
 .card{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  z-index: 2;
-  /* width: 100%; */
-  max-width: 300px;
-  height: 300px;
-  background-color: #fff;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
+  transform-style: preserve-3d;
+  transition: transform 1s ease-in-out;
+}
+.frente img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+
+.atraz{
+  background-color: #479DEE;
+  transform: rotateY(180deg);
   
 }
-.cardContainer:hover .texto_00{
-  bottom:0px;
+.atraz p{
+  color: #fff;
+  margin: 15px;
+  font-size: 1.1rem;
+
 }
-.card img{
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
+.atrazBtn{
+  margin-top: 70px;
+}
+.atrazBtn button{
+  background-color: #fb6158;
+  width: 150px;
+  height: 40px;
+  display: block;
+  margin: 10px auto 10px auto ;
+  box-shadow: 2px 2px 4px #000;
+  outline: 0;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: rgb(255, 255, 255);
+  letter-spacing: 2px;
+  border-radius: 5px;
+}
+
+
+
   
+.frente, .atraz{
+width: 100%;
+height: 100%;
+backface-visibility: hidden;
+position: absolute;
+border-radius: 10px ;
+overflow: hidden;
+box-shadow: 4px 4px 6px black;
+
 }
+.cardContainer:hover .card{
+  transform: rotateY(180deg);
+}
+
+
 .tecnologias{
   max-width: 1200px;
   margin: 0 auto;
   padding: var(--margemContainer);
+  /* background: url(img/bg1.svg); */
 }
 .tecnologias h3{
 font-size: 1.5rem;
