--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 html {
   scroll-behavior: smooth;
@@ -222,8 +223,14 @@ margin: 20px 10px 40px 20px;
   width: 300px;
   height: 350px;
   margin: 20px 10px 20px 10px;
+ 
 }
-
+.borda{
+  width: 280px;
+  height: 330px;
+  /* margin:15px; */
+  border: 4px solid rgb(255, 255, 255);
+}
 .card{
   width: 100%;
   height: 100%;
@@ -240,6 +247,9 @@ margin: 20px 10px 40px 20px;
 .atraz{
   background-color: #479DEE;
   transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
 }
 .atraz p{
